--- a/style.css
+++ b/style.css
@@ -59,12 +59,30 @@ header{
     color: #fff;
     font-weight: 400;
 }
-.btn{
+button{
     padding: 8px 16px;
     border-radius: 50px;
+    border: 1px solid transparent;
+}
+.banner{
+    background: url(./assets/hero-bg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.banner-btn{
+    display: flex;
+    gap: 8px;
 }
 .btn p{
     font-size: 16px;
     color: #fff;
     font-weight: 600;
+}
+.btn2{
+    background-color: transparent;
+    border: 1px solid #00FF88;
+}
+.btn2 p{
+    color: #00FF88;
 }
