--- a/style.css
+++ b/style.css
@@ -16,22 +16,22 @@ p{
     font-weight: 400;
 }
 h1{
-    font-weight: 60px;
+    font-size: 60px;
     color: #fff;
     font-weight: 800;
 }
 h2{
-    font-weight: 48px;
+    font-size: 48px;
     color: #fff;
     font-weight: 700;
 }
 h3{
-    font-weight: 32px;
+    font-size: 32px;
     color: #fff;
     font-weight: 700;
 }
 h4{
-    font-weight: 24px;
+    font-size: 24px;
     color: #fff;
     font-weight: 700;
 }
@@ -69,14 +69,15 @@ button{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 280px 0 300px;
+    padding: 280px 0 120px;
 }
 .mike-circle{
     width: 100%;
 }
 .mike-circle .circle{
     position: absolute;
-    left: 530px;
+    /* left: 525px; */
+    left: 38%;
     top: 180px;
 }
 /* .circle img{
@@ -84,13 +85,30 @@ button{
 } */
 .mike{    
     position: absolute;
-    left: 650px;
+    left: 645px;
     top: 270px;
     z-index: 1;
 }
+.banner-content{
+    margin: 200px auto 0;
+    max-width: 550px;
+    text-align: center;
+    /* display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; */
+}
+.banner-content p{
+    margin-top: 8px;
+}
+.banner-btn p{
+    margin-top: 0px;
+}
 .banner-btn{
     display: flex;
+    justify-content: center;
     gap: 8px;
+    margin: 24px 0 0;
 }
 .btn p{
     font-size: 16px;
