--- a/style.css
+++ b/style.css
@@ -205,19 +205,19 @@ button{
     gap: 8px;
 }
 .s-icon{
-    padding: 5px;
+    padding: 3px 5px;
     border-radius: 100%;
     border: 1px solid #D605CB;
 }
 .s-icon li a{
-    color: #D605CB;
+    font-size: 15px;
 }
-.s-icon:hover{
+/* .s-icon:hover{
     border: 1px solid #F8C751;
-}
-.s-icon li a:hover{
+} */
+/* .s-icon li a:hover{
     color: #F8C751;
-}
+} */
 footer{
     background: url(./assets/footer-bg.png);
     background-size: cover;
@@ -238,6 +238,9 @@ footer{
     justify-content: center;
     gap: 40px;
     margin: 20px 0 0;
+}
+.footer-icons li a{
+    color: #d1cfd8;
 }
 .footer-parent p{
     margin-top: 30px;
