--- a/style.css
+++ b/style.css
@@ -150,9 +150,28 @@ button{
 }
 .techwave{
     background-color: #230E3D;
+    padding: 60px 0 80px;
+}
+.grid-parent{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 200px);
+    gap: 30px;
 }
 .one , .two , .three, .four , .five{
     background-color: #2A0F4D;
+}
+.one{
+    grid-column: span 1;
+    grid-row: span 2;
+}
+.two , .three , .four{
+    grid-column: span 2;
+    grid-row: span 1;
+}
+.five{
+    grid-column: span 1;
+    grid-row: span 1;
 }
 .feature-parent{
     display: flex;
