responsive issue fixed

--- a/responsive.css
+++ b/responsive.css
@@ -34,7 +34,7 @@
     .mike img{
         width: 60px;
     }
-    .circle{
+    .mike-circle .circle{
         left: 83px;
         top: -170px;
     }
