--- a/responsive.css
+++ b/responsive.css
@@ -24,6 +24,45 @@
         max-width: 400px;
         margin: 0 auto;
     }
+    header{
+        padding: 0 20px;
+    }
+    #desktop-menu{
+        display: none;
+    }
+    #desktop-button{
+        display: none;
+    }
+    .ham{
+        background: none;
+        border: none;
+        float: right;
+        margin: 1.5em;
+        cursor: pointer;
+    }
+    nav{
+        width: 50%;
+        left: auto;
+        bottom: auto;
+        background-color: #412567;
+        border: none;
+        height: 100vh;
+        padding: 10px;
+        /* translate: 100% 0;
+        transition: translate 0.5s; */
+    }
+    nav ul{
+        list-style-type: none;
+        margin-top: 20px;
+    }
+    nav ul li{
+        padding: 5px 0;
+    }
+    nav ul li a{
+        text-decoration: none;
+        color: #fff;
+        font-size: 2rem;
+    }
     .banner{
         padding: 20px;
     }
